--- a/S3Server/pom.xml
+++ b/S3Server/pom.xml
@@ -17,9 +17,9 @@
         <!-- Versies van belangrijkste frameworks. -->
         <beanmapper.version>0.2.19</beanmapper.version>    <!-- 0.2.19 / 0.3.1 -->
         <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
-        <jackson.version>2.8.0</jackson.version>
-        <okhttp.version>3.4.0</okhttp.version>
-        <spring.version>4.3.1.RELEASE</spring.version>
+        <jackson.version>2.8.1</jackson.version>
+        <!-- <okhttp.version>3.4.0</okhttp.version> -->
+        <spring.version>4.3.2.RELEASE</spring.version>
         <spring-data-mongodb.version>1.9.2.RELEASE</spring-data-mongodb.version>
         <google-maps-services.version>0.1.15</google-maps-services.version>
 
@@ -183,7 +183,7 @@
             <version>${spring-data-mongodb.version}</version>
         </dependency>
         
-        <!-- JSON lib tbv Restful Spring MVC. -->
+        <!-- JSON lib voor (un)marshalling t.b.v. Restful Spring MVC. -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -204,35 +204,28 @@
             <version>${beanmapper.version}</version>
         </dependency>
         
-        <!-- Framework om eenvoudig RESTcalls te kunnen bouwen.  -->
+        <!-- Framework om eenvoudig RESTcalls te kunnen bouwen. 
+             Wordt nog niet gebruikt omdat we alleen Google Maps Services gebruiken.
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>${okhttp.version}</version>
         </dependency>
+         -->
         
-        
+        <!-- Google Maps Services. -->
         <dependency>
             <groupId>com.google.maps</groupId>
             <artifactId>google-maps-services</artifactId>
             <version>${google-maps-services.version}</version>
         </dependency>
 
-
-        <!-- Logging -->
+        <!-- Logging. -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
-            <!-- <scope>provided</scope> -->
         </dependency>
-        <!-- 
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>${commons-logging.version}</version>
-        </dependency>
-         -->
         <dependency>    <!-- I.p.v. transitieve slf4j deps in Spring Data, Hibernate (Validator), Querydsl en Dozer. -->
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
@@ -264,5 +257,7 @@
             <version>3.2.0</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>    
+        
+    </dependencies>
+        
 </project>
