--- a/S3Server/pom.xml
+++ b/S3Server/pom.xml
@@ -226,7 +226,7 @@
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
-        <dependency>    <!-- I.p.v. transitieve slf4j deps in Spring Data, Hibernate (Validator), Querydsl en Dozer. -->
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j-log4j12.version}</version>
