--- a/S3Server/pom.xml
+++ b/S3Server/pom.xml
@@ -15,14 +15,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
         <!-- Versies van belangrijkste frameworks. -->
-        <beanmapper.version>0.2.19</beanmapper.version>    <!-- 0.2.19 / 0.3.1 -->
         <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
         <jackson.version>2.8.1</jackson.version>
-        <!-- <okhttp.version>3.4.0</okhttp.version> -->
         <spring.version>4.3.2.RELEASE</spring.version>
         <spring-data-mongodb.version>1.9.2.RELEASE</spring-data-mongodb.version>
         <google-maps-services.version>0.1.15</google-maps-services.version>
-
+        <!-- <okhttp.version>3.4.0</okhttp.version> -->
+        <!-- <beanmapper.version>0.2.19</beanmapper.version> -->
+        
         <!-- Groovy en Spock. -->
         <groovy.version>2.4.3</groovy.version>
         <spock.version>1.0-groovy-2.4</spock.version>
@@ -183,7 +183,7 @@
             <version>${spring-data-mongodb.version}</version>
         </dependency>
         
-        <!-- JSON lib voor (un)marshalling t.b.v. Restful Spring MVC. -->
+        <!-- JSON lib voor (un)marshalling t.b.v. RESTful Spring MVC. -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -197,12 +197,13 @@
             <version>${hibernate-validator.version}</version>
         </dependency>
         
-        <!-- Beanmapper bijv. van/naar DTO's. -->
+        <!-- Beanmapper bijv. van/naar DTO's.
         <dependency>
             <groupId>io.beanmapper</groupId>
             <artifactId>beanmapper</artifactId>
             <version>${beanmapper.version}</version>
         </dependency>
+         -->
         
         <!-- Framework om eenvoudig RESTcalls te kunnen bouwen. 
              Wordt nog niet gebruikt omdat we alleen Google Maps Services gebruiken.
