--- a/S3Server/src/main/webapp/WEB-INF/web.xml
+++ b/S3Server/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,21 @@
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <display-name>S3Server</display-name>
     <description>S3Server</description>
 
+    <!-- 
+        Versie van S3Server.
+        Placeholder wordt tijdens builden gevuld vanuit pom.xml.
+     -->
     <context-param>
         <param-name>version</param-name>
         <param-value>${project.version}</param-value>
     </context-param>
 
-    <!-- Configureer de ContextLoaderListener om gebruik te maken van de AppConfig klasse. -->
+    <!-- 
+        Configureer de hierna volgende ContextLoaderListener om gebruik te maken van de AppConfig klasse.
+     -->
     <context-param>
         <param-name>contextClass</param-name>
         <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
@@ -20,12 +25,18 @@
         <param-value>nl.ou.s3server.config.AppConfig</param-value>
     </context-param>
 
-    <!-- SpringFramework Context Loader Listener. -->
+    <!-- 
+        SpringFramework Context Loader Listener. 
+        Deze is nodig om de context van het Spring framework te koppelen aan de context van de webapp. 
+     -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
-    <!-- Spring (REST) dispatcher servlet. -->
+    <!-- 
+        Spring (REST) dispatcher servlet. Dit is de frontcontroller voor het Spring MVC framework.
+        Voor de configuratie wordt de nl.ou.s3server.config.WebConfig klasse gebruikt.
+     -->
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -44,4 +55,3 @@
     </servlet-mapping>
 
 </web-app>
-
