--- a/S3Server/pom.xml
+++ b/S3Server/pom.xml
@@ -258,7 +258,14 @@
             <version>3.2.0</version>
             <scope>test</scope>
         </dependency>
-        
+        <!-- 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
+            <version>3.3.2</version>
+            <scope>test</scope>
+        </dependency>
+         -->
     </dependencies>
         
 </project>
